Terminando a lista de exercicios
Exercicios 8,9,10 concluido!

--- a/Terceira lista/Exercicio 9/Exercicio 9.cbp
+++ b/Terceira lista/Exercicio 9/Exercicio 9.cbp
@@ -30,14 +30,19 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="main.cpp" />
-		<Unit filename="ordenando.h" />
+		<Unit filename="main.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="ordenado.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="ordenado.h" />
 		<Extensions>
 			<code_completion />
 			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
